# cottonquant

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CottonquantV4任务书.md  Makefile  README.md  pyproject.toml
configs/: backtest.yaml  cf_ifind_collection_checklist.csv  cf_research_data_ports.csv  cost_model.yaml  data_sources.yaml  data_sources_cf_research.yaml  factor_registry.yaml  research_mode.yaml  roll_rules.yaml
docs/: ARCHITECTURE.md  ARCHIVE.md  BACKTEST.md  CF_CONTRACT_RULE_REVIEW.md  CHAIN_MAP.md  CONTINUOUS_PRICE.md  CONTRACT_MASTER.md  CURRENT_STATE_RESEARCH_MAP.md  DATA_QUALITY_RULES_CF.md  DATA_SOURCES.md  DATA_SOURCES_CF_RESEARCH.md  DEPENDENCIES.md  EXTENSION_GUIDE.md  FACTORS.md  FIELD_DICTIONARY.md  FIELD_MAPPING_CF_RESEARCH.md  IFIND_CF_DATA_COLLECTION_CHECKLIST.md  POST_R22_CF_OFFICIAL_HISTORY_CONNECT.md  POST_R22_CF_REAL_DATA_VALIDATION_RESULT.md  POST_R22_CF_VALIDATION_PACK.md  PROJECT_DIRECTION.md  PROJECT_INTRO_FOR_ARCHITECTURE.md  QA_CHECKLIST.md  R06_R22_COMPLETION_AUDIT.md  RELEASE_CHECKLIST.md  REPORTS.md  RESEARCH_CARRY_FACTOR.md  RESEARCH_CONTINUOUS_PRICE.md  RESEARCH_COST_SENSITIVITY.md  RESEARCH_DAILY_BRIEF.md  RESEARCH_DAILY_PIPELINE.md  RESEARCH_DATA_PORTS_NEXT.md  RESEARCH_EXPANSION_GATE.md  RESEARCH_FACTOR_DIAGNOSTICS.md  RESEARCH_FORWARD_RETURNS.md  RESEARCH_FUNDAMENTAL_DATA_CONTRACT.md  RESEARCH_FUNDAMENTAL_OBSERVATION.md  RESEARCH_MANUAL_REVIEW_GUIDE.md  RESEARCH_MAPPING.md  RESEARCH_MOMENTUM_FACTOR.md  (+19 more)
prompts/: D0_bootstrap.md  MASTER_ORCHESTRATOR.md  MASTER_RESEARCH_WORKBENCH.md  R00_scope_lock.md  R01_repo_audit.md  (+1 more)
(+254 files in other folders)
